[package]
name = "orthanc-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
walkdir = "2.3.2"
crossbeam = "0.8.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
